fix(ZNTA-1835): fix alignment of translation state buttons in editor

--- a/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
@@ -704,6 +704,13 @@ span.u-textNeutral span.s2, a.Link--Neutral span.s2 {
   vertical-align:baseline !important;
 }
 
+button.Link--neutral .row span.u-ltemd-hidden {
+  vertical-align:super;
+}
+
+label span.n1 {
+  vertical-align: middle !important;
+}
 /**
  * Media Queries
  */
